<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="dormAdapter"
            type="com.mauricio.shoppingcart.dorms.adapters.DormRecyclerViewAdapter"/>
        <variable
            name="columns"
            type="Integer"/>
        <variable
            name="expandedButtonSheet"
            type="Boolean"/>
        <variable
            name="enableButtonCheckout"
            type="Boolean"/>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dorm_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:adapter="@{dormAdapter}"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_manager='@{"linear_vertical"}' />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_bottom_sheet_dorm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            app:behavior_hideable="false"
            app:behavior_peekHeight="60dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/line"
                    android:background="@drawable/background_bottom_sheet"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    bind:layout_constraintEnd_toEndOf="parent"
                    bind:layout_constraintStart_toStartOf="parent"
                    bind:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    bind:layout_constraintEnd_toEndOf="parent"
                    bind:layout_constraintStart_toStartOf="parent"
                    bind:layout_constraintTop_toBottomOf="@+id/line"
                    bind:srcCompat="@drawable/ic_calculate_arrow_slim"
                    android:rotation="@{expandedButtonSheet == false ? 180 : 0}"/>

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="Total Shopping"
                    android:textSize="16sp"
                    bind:layout_constraintStart_toStartOf="parent"
                    bind:layout_constraintTop_toBottomOf="@+id/line"
                    bind:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="0.0$"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    bind:layout_constraintBottom_toBottomOf="@+id/textView16"
                    bind:layout_constraintEnd_toEndOf="parent"
                    bind:layout_constraintTop_toTopOf="@+id/textView16" />

                <Button
                    android:id="@+id/checkout_shopping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="Checkout"
                    android:enabled="@{enableButtonCheckout}"
                    bind:layout_constraintEnd_toEndOf="parent"
                    bind:layout_constraintStart_toStartOf="parent"
                    bind:layout_constraintTop_toBottomOf="@+id/total_amount" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    bind:layout_constraintEnd_toEndOf="parent"
                    bind:layout_constraintStart_toStartOf="parent"
                    bind:layout_constraintTop_toBottomOf="@+id/checkout_shopping" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>