...
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".main.MainActivity"
        android:id="@+id/constraint_layout_item_dorm">

        <ImageView
            android:id="@+id/image_view_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
...

        <ImageView
            android:id="@+id/removeBed"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/addBed"
            app:layout_constraintEnd_toStartOf="@+id/totalBed"
            app:layout_constraintTop_toTopOf="@+id/addBed"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_outline_remove_circle_outline_24" />

        <ImageView
...
