<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_change_currency"
        android:icon="@drawable/change_foreign"
        android:title="Change"
        app:showAsAction="always"/>

</menu>